# wyrd

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  deny-all-features.toml  deny.toml  docker-compose.yml  rust-toolchain.toml  typos.toml  wyrd.code-workspace
crates/chunk-format/: Cargo.toml
crates/chunk-format/src/: codec.rs  error.rs  header.rs  lib.rs
crates/chunk-format/tests/: roundtrip.rs
crates/chunkstore-fs/: Cargo.toml
crates/chunkstore-fs/src/: lib.rs
crates/chunkstore-fs/tests/: blocking_offload.rs  concurrent_put.rs  conformance.rs
crates/chunkstore-grpc/: Cargo.toml
crates/chunkstore-grpc/src/: client.rs  conv.rs  error.rs  fanout.rs  lib.rs  server.rs
crates/chunkstore-grpc/tests/: docker-compose.yml  dserver_image.rs  error_class.rs  list_delete.rs  read_fault_seam.rs  round_trip.rs  tier1_jepsen_consistency.rs  tier2_integration.rs  tier2_kill_reconstruct.rs
crates/chunkstore-grpc/tests/dserver/: Dockerfile
crates/coordination-conformance/: Cargo.toml
crates/coordination-conformance/src/: lib.rs
crates/coordination-conformance/tests/: demonstrated_red.rs
crates/coordination-etcd/: Cargo.toml
crates/coordination-etcd/src/: fencing.rs  hold.rs  keyspace.rs  lib.rs  store.rs
crates/coordination-etcd/tests/: conformance.rs
crates/coordination-mem/: Cargo.toml
crates/coordination-mem/src/: lib.rs
crates/coordination-mem/tests/: conformance.rs
crates/core/: Cargo.toml
crates/core/benches/: erasure.rs  throughput.rs
crates/core/src/: erasure.rs  lib.rs  metadata.rs  placement.rs  read.rs  repair.rs  write.rs
crates/core/tests/: buffered_lease_lapse.rs  domain_placement.rs  fragment_identity.rs  mutation_regressions.rs  mutation_regressions_round2.rs  placement_record.rs  read_block_fault_repair.rs  read_repair.rs  stream_lease_lapse.rs  stream_lease_renewal.rs  write_fanout.rs
crates/custodian/: Cargo.toml
crates/custodian/src/: backfill.rs  desired_state.rs  gc.rs  leadership.rs  lib.rs  rebalance.rs  reconciliation.rs  reconstruction.rs  restore.rs  scrub.rs  telemetry.rs
crates/custodian/tests/: backfill.rs  backfill_telemetry.rs  gc.rs  gc_delete_backstop.rs  gc_telemetry.rs  rebalance.rs  reconstruction.rs  restore_reconcile.rs  scrub.rs  skeleton.rs  tier1_disk_faults.rs
crates/dst/: Cargo.toml
crates/dst/src/: lib.rs
crates/dst/tests/: commit_ambiguity.rs  concurrency.rs  conformance.rs  coordination.rs  custodian.rs  network.rs  no_fdb_linkage.rs  tikv_await_commit_interleaving.rs
crates/dst/tests/support/: mod.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: lib.rs
crates/gateway-s3/: Cargo.toml
crates/gateway-s3/src/: checksum.rs  crypto.rs  lib.rs  request_id.rs  sigv4.rs  streaming.rs
crates/metadata-conformance/: Cargo.toml
crates/metadata-conformance/src/: lib.rs
crates/metadata-conformance/tests/: demonstrated_red.rs
crates/metadata-fault-conformance/: Cargo.toml
crates/metadata-fault-conformance/src/: lib.rs  nemesis.rs
crates/metadata-fault-conformance/tests/: nemesis_oracles.rs
crates/metadata-fdb/: Cargo.toml
crates/metadata-fdb/src/: lib.rs
crates/metadata-fdb/tests/: conformance.rs  contention.rs  preflight.rs  scan.rs  tier1_contention.rs  tier1_kill_mid_commit.rs  tier1_metadata_consistency.rs  tier1_metadata_nemesis.rs  timeout.rs
crates/metadata-fdb/tests/support/: mod.rs
crates/metadata-redb/: Cargo.toml
crates/metadata-redb/src/: lib.rs
crates/metadata-redb/tests/: conformance.rs  scan.rs
crates/metadata-tikv/: Cargo.toml
crates/metadata-tikv/src/: lib.rs
crates/metadata-tikv/tests/: conformance.rs  contention.rs  deadline.rs  scan.rs  tier1_metadata_consistency.rs  tier2_metadata_io.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/wyrd/v0/: chunk.proto  commit.proto
crates/proto/src/: lib.rs
crates/proto/tests/: stubs.rs
crates/server/: Cargo.toml
crates/server/src/: cli.rs  consistency_observable.rs  consistency_workload.rs  custodian.rs  dserver.rs  lib.rs  logging.rs  main.rs
crates/server/tests/: advertise_addr_registration.rs  backend_selection.rs  cli_roundtrip.rs  closed_write_path.rs  consistency_observable.rs  consistency_run_fdb.rs  consistency_workload.rs  custodian_day_one.rs  custodian_gc.rs  dserver.rs  dst_commit.rs  dst_erasure.rs  dst_read_fanout.rs  e2e.rs  erasure_path.rs  failure_domain_registration.rs  fdb_backend_selection.rs  gateway_cluster.rs  gateway_lease_expiry.rs  gateway_multi_writer.rs  health_probe.rs  log_env_directive.rs  log_span_correlation.rs  read_fanout.rs  read_path.rs  request_capacity_planes.rs  restore_runbook_command.rs  s3_copy_object_guard.rs  s3_delete_objects.rs  s3_gateway_cluster.rs  s3_head_object.rs  s3_http_wire.rs  s3_list_objects.rs  s3_object_metadata.rs  s3_range_conditional.rs  s3_streaming_trailer.rs  write_fanout.rs  write_path.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/traits/: Cargo.toml
crates/traits/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: conformance.rs  consistency_run.rs  consistency_run_runner.rs  deploy_guard.rs  disk_faults.rs  dist.rs  faults.rs  fdb_doctor.rs  fdb_faults.rs  kill_reconstruct.rs  lib.rs  main.rs  metadata_faults.rs  nemesis.rs  repo_guard.rs  vectors.rs
xtask/tests/: consistency_ci_job.rs  consistency_run_orchestration.rs  deploy_no_orchestrator_coupling.rs  disk_faults_orchestration.rs  dist_templates.rs  fdb_deploy_profiles.rs  fdb_harness.rs  fdb_image.rs  metadata_faults_orchestration.rs  nemesis_orchestration.rs  readme_dev_section.rs  repo_hygiene_guards.rs
xtask/tests/fixtures/consistency-run/: checker-output-fail.txt  checker-output-indeterminate-final-read.txt  checker-output-pass.txt  checker-output-unknown.txt  directory-history-indeterminate-final-read.edn  directory-history-known-bad.edn  directory-history-known-good.edn  directory-history-rejected-vocabulary.edn  register-history-known-bad.edn  register-history-known-good.edn
(+199 files in other folders)
