# Wyrd Cargo workspace.
#
# Coarse-to-fine crate structure (ADR-0016): start with foundation crates plus a
# combined `core`, and split as boundaries firm up. The dependency rule
# (ADR-0010): implementations and consumers depend on `traits`, never on each
# other's concretes; only the `server` binary wires concretes together.
[workspace]
resolver = "2"
members = [
    "crates/chunk-format",
    "crates/proto",
    "crates/traits",
    "crates/testkit",
    "crates/core",
    "crates/metadata-redb",
    "crates/chunkstore-fs",
    "crates/chunkstore-grpc",
    "crates/coordination-mem",
    "crates/server",
    "crates/dst",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/getwyrd/wyrd"
publish = false

[workspace.dependencies]
# Foundation crates, referenced by path so the workspace builds standalone.
wyrd-chunk-format = { path = "crates/chunk-format" }
wyrd-proto = { path = "crates/proto" }
wyrd-traits = { path = "crates/traits" }
wyrd-testkit = { path = "crates/testkit" }
wyrd-core = { path = "crates/core" }
wyrd-metadata-redb = { path = "crates/metadata-redb" }
wyrd-chunkstore-fs = { path = "crates/chunkstore-fs" }
wyrd-chunkstore-grpc = { path = "crates/chunkstore-grpc" }
wyrd-coordination-mem = { path = "crates/coordination-mem" }

# Shared third-party dependencies, version-pinned once here.
async-trait = "0.1"
bytes = "1"
# EC micro-benchmarks (M1.7). Lean: no plotters/rayon HTML stack — the console
# numbers are what CI tracks, and fewer transitive deps keeps the license
# surface small (ADR-0003).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
crc32c = "0.6"
# Runtime-agnostic future combinators (try_join_all) for the parallel write
# fan-out / any-k read (M2.4/M2.5). `alloc`-only: single-task concurrency that
# polls the n fragment futures cooperatively — deterministic under madsim, no
# task spawning, no runtime tie-in (ADR-0009).
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
madsim = "0.2"
# The `tonic` simulator on madsim (M2.6, proposal 0004 "DST and integration
# tests"). Under `--cfg madsim` the gRPC `ChunkStore` stubs resolve here so the
# *real* `GrpcChunkStore` wire code runs on madsim's deterministic simulated
# network (ADR-0009), rather than a ChunkStore-level in-sim fake (the recorded
# fallback). Version matrix: madsim-tonic 0.6.0+0.14 tracks tonic 0.14. Default
# features off — the dev/DST profile runs plaintext, no TLS (ADR-0005). The
# published version carries `+0.14` build metadata (the tracked tonic line);
# the requirement drops it (semver ignores build metadata) to keep cargo quiet.
madsim-tonic = { version = "0.6.0", default-features = false }
# Codegen counterpart, used by `proto`'s build.rs only when `CARGO_CFG_MADSIM`
# is set; it emits the simulated client/server stubs into `OUT_DIR/sim/`.
madsim-tonic-build = "0.6.0"
pollster = "0.4"
prost = "0.14"
protox = "0.9"
rand = "0.10"
rand_chacha = "0.3"
redb = "2"
reed-solomon-simd = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Async runtime, used only to *host* a tonic server (the gRPC stack is built on
# tokio/hyper, already in the tree via tonic). Wyrd's own async surface stays
# runtime-agnostic (async-trait over abstract seams, ADR-0009); tokio is a
# test/binary host detail — the `d-server` subcommand (M2.3) and the in-process
# round-trip test (M2.2) need a real reactor. Pinned once here, kept minimal.
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "signal",
    "sync",
] }
tokio-stream = { version = "0.1", features = ["net"] }
# gRPC transport for the networked storage path (M2, proposal 0004). Default
# features only — no `tls` (the dev/DST profiles run plaintext; mTLS is a later
# composition seam, ADR-0005). Version matrix, settled against crates.io and kept
# current: tonic 0.14 <-> tonic-prost-build 0.14 <-> protox 0.9 <-> prost 0.14,
# and madsim-tonic 0.6.0+0.14 (added in M2.6) tracks tonic 0.14 — so the
# deterministic-simulation DST runs the *real* wire code, no in-sim fake (ADR-0009).
tonic = "0.14"
# tonic 0.14 split the prost codec into its own runtime crate; the generated
# service stubs reference `tonic_prost::ProstCodec`.
tonic-prost = "0.14"
tonic-prost-build = "0.14"
