[package]
name = "xtask"
description = "Project automation (ADR-0016): `cargo xtask ci` and `cargo xtask conformance`, so every check runs identically on a laptop and in CI without a working `make`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
wyrd-chunk-format.workspace = true
serde.workspace = true
serde_json.workspace = true
