[package]
name = "wyrd-chunk-format"
description = "Reference encoder/decoder for the versioned on-disk fragment format (ADR-0019). Stub at M0.1; the v1 header codec lands in M0.2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
crc32c.workspace = true

[dev-dependencies]
# Seeded round-trip property tests reuse the deterministic simulator (ADR-0009).
wyrd-testkit.workspace = true
