[package]
name = "wyrd-chunkstore-grpc"
description = "gRPC ChunkStore: the GrpcChunkStore client and the D-server-side service over an injected ChunkStore (ADR-0010, ADR-0016, proposal 0004). The networked 'D server'."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# The dependency rule (ADR-0010): both sides of the seam depend on the trait and
# the wire contract, NEVER on a concrete store (chunkstore-fs). The server hosts
# whatever `S: ChunkStore` the binary injects.
wyrd-traits.workspace = true
wyrd-proto.workspace = true
bytes.workspace = true
async-trait.workspace = true

# Cfg-aliased like `proto` (proposal 0004): a normal build links real `tonic`; a
# `--cfg madsim` build links `madsim-tonic` *as* `tonic`, so the *same*
# `GrpcChunkStore` client + service code runs on madsim's simulated network in
# the Tier-1 DST (ADR-0009) with no source change.
[target.'cfg(not(madsim))'.dependencies]
tonic.workspace = true

# Declared directly (not workspace-inherited): cargo cannot rename an inherited
# dependency, and the alias must carry `package = "madsim-tonic"`. Version pinned
# to match the workspace `madsim-tonic` entry.
[target.'cfg(madsim)'.dependencies]
tonic = { package = "madsim-tonic", version = "0.6.0", default-features = false }

[dev-dependencies]
# The round-trip test injects the real filesystem store behind the service and
# drives it over a real tonic loopback connection — a concrete only the test
# (standing in for `server`'s composition) is allowed to name.
wyrd-chunkstore-fs.workspace = true
wyrd-chunk-format.workspace = true
# The Tier-2 integration test (`tests/tier2_integration.rs`, M2.7) drives the
# real client write/read paths (fan-out write, any-k read) over the fan-out store
# against containerized D servers — the same composition `server` performs.
wyrd-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tempfile.workspace = true
