[package]
name = "wyrd-coordination-mem"
description = "In-memory Coordination: single-process service discovery (leased, expiring), leader election, try-acquire locks, and mutable config behind the trait seam (ADR-0006). etcd is the production backend wired in by `server`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
wyrd-traits.workspace = true
# The Clock seam (ADR-0009): production code is written against testkit's
# abstractions, so leased registrations can expire under both a real and a
# simulated clock.
wyrd-testkit.workspace = true
async-trait.workspace = true
bytes.workspace = true

[dev-dependencies]
# The conformance suite is written against the trait surface and driven by
# pollster (the in-memory methods never yield).
pollster.workspace = true

# Inherit the workspace lint policy (single source of truth in the root
# Cargo.toml [workspace.lints.*]).
[lints]
workspace = true
