[package]
name = "wyrd-core"
description = "Combined client/protocol logic (coarse at M0; split as boundaries firm up — ADR-0016). Stub at M0.1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
wyrd-traits.workspace = true
wyrd-proto.workspace = true
wyrd-chunk-format.workspace = true
bytes.workspace = true
futures-util.workspace = true
reed-solomon-simd.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Seeded property tests reuse the deterministic simulator (ADR-0009).
wyrd-testkit.workspace = true
# Drives the async write/read path in tests without a runtime tie-in.
pollster.workspace = true
# Implement the ChunkStore trait for an in-test fault-injecting fake.
async-trait.workspace = true
# EC throughput micro-benchmarks (M1.7, `cargo xtask bench`).
criterion.workspace = true

[[bench]]
name = "erasure"
harness = false
